// Vitest Snapshot v1

exports[`pages/songs/index.vue > snapshot test > renders loading state 1`] = `
<section
  class="section"
>
  <h1
    class="title"
  >
    Song List
  </h1>
  <div
    class="b-table"
  >
    <div
      style="display: none;"
    >
      
      <span
        data-id="1"
      >
        Name
      </span>
      <span
        data-id="2"
      >
        Artist
      </span>
      <span
        data-id="3"
      >
        BPM
      </span>
      <span
        data-id="4"
      >
        Series
      </span>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <div
      class="table-wrapper"
    >
      <table
        class="table is-striped is-narrow is-empty"
        tabindex="false"
      >
        <!--v-if-->
        <thead>
          <tr>
            <!--v-if-->
            <!--v-if-->
            
            <th
              class=""
              draggable="false"
            >
              <span>
                Name 
                <span
                  class="th-wrap sort-icon"
                  style="display: none;"
                >
                  <span
                    class="icon is-small"
                  >
                    <i
                      class="mdi mdi-arrow-up"
                    />
                  </span>
                </span>
              </span>
            </th>
            <th
              class=""
              draggable="false"
            >
              <span>
                Artist 
                <span
                  class="th-wrap sort-icon"
                  style="display: none;"
                >
                  <span
                    class="icon is-small"
                  >
                    <i
                      class="mdi mdi-arrow-up"
                    />
                  </span>
                </span>
              </span>
            </th>
            <th
              class=""
              draggable="false"
            >
              <span>
                BPM 
                <span
                  class="th-wrap sort-icon"
                  style="display: none;"
                >
                  <span
                    class="icon is-small"
                  >
                    <i
                      class="mdi mdi-arrow-up"
                    />
                  </span>
                </span>
              </span>
            </th>
            <th
              class=""
              draggable="false"
            >
              <span>
                Series 
                <span
                  class="th-wrap sort-icon"
                  style="display: none;"
                >
                  <span
                    class="icon is-small"
                  >
                    <i
                      class="mdi mdi-arrow-up"
                    />
                  </span>
                </span>
              </span>
            </th>
            
            <!--v-if-->
          </tr>
          <tr>
            <!--v-if-->
            <!--v-if-->
            
            <th
              class=""
            >
              
              <div
                class="control"
              >
                <input
                  autocomplete="off"
                  class="input"
                  on="function () { [native code] }"
                  type="text"
                />
                <!--v-if-->
                <!--v-if-->
                <!--v-if-->
              </div>
              
            </th>
            <th
              class=""
            >
              
              <div
                class="control"
              >
                <input
                  autocomplete="off"
                  class="input"
                  on="function () { [native code] }"
                  type="text"
                />
                <!--v-if-->
                <!--v-if-->
                <!--v-if-->
              </div>
              
            </th>
            <th
              class=""
            >
              <!--v-if-->
            </th>
            <th
              class=""
            >
              <!--v-if-->
            </th>
            
            <!--v-if-->
          </tr>
          <!--v-if-->
        </thead>
        <tbody>
          
          
          <tr>
            <td
              colspan="4"
            >
              
              <section
                class="section"
              >
                <div
                  class="content has-text-grey has-text-centered"
                >
                  <p>
                    Nothing here.
                  </p>
                </div>
              </section>
              
            </td>
          </tr>
        </tbody>
        <!--v-if-->
      </table>
      
      <transition-stub>
        <div
          class="o-load loading"
        >
          <div
            class="o-load__overlay loading-overlay"
          />
          
          <span
            class="icon is-spin is-medium o-load__icon icon"
          >
            <i
              class="mdi mdi-loading mdi-36px"
            />
          </span>
          
        </div>
      </transition-stub>
      
    </div>
    
    <div
      class="level"
    >
      <div>
        
        
      </div>
      <div>
        <div>
          <nav
            class="pagination"
          >
            <a
              aria-current="false"
              class="pagination-link pagination-previous is-disabled pagination-previous is-disabled"
              href="#"
              role="button"
            >
              
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-left mdi-24px"
                />
              </span>
              
            </a>
            <a
              aria-current="false"
              class="pagination-link pagination-next is-disabled pagination-next is-disabled"
              href="#"
              role="button"
            >
              
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-right mdi-24px"
                />
              </span>
              
            </a>
            <ul
              class="pagination-list"
            >
              <!--First-->
              <!--v-if-->
              <!--v-if-->
              <!--Pages-->
              
              
              <!--Last-->
              <!--v-if-->
              <!--v-if-->
            </ul>
          </nav>
        </div>
      </div>
    </div>
    
  </div>
</section>
`;

exports[`pages/songs/index.vue > snapshot test > renders song info 1`] = `
<section
  class="section"
>
  <h1
    class="title"
  >
    Song List
  </h1>
  <div
    class="b-table"
  >
    <div
      style="display: none;"
    >
      
      <span
        data-id="1"
      >
        Name
      </span>
      <span
        data-id="2"
      >
        Artist
      </span>
      <span
        data-id="3"
      >
        BPM
      </span>
      <span
        data-id="4"
      >
        Series
      </span>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <div
      class="table-wrapper"
    >
      <table
        class="table is-striped is-narrow"
        tabindex="false"
      >
        <!--v-if-->
        <thead>
          <tr>
            <!--v-if-->
            <!--v-if-->
            
            <th
              class=""
              draggable="false"
            >
              <span>
                Name 
                <span
                  class="th-wrap sort-icon"
                  style="display: none;"
                >
                  <span
                    class="icon is-small"
                  >
                    <i
                      class="mdi mdi-arrow-up"
                    />
                  </span>
                </span>
              </span>
            </th>
            <th
              class=""
              draggable="false"
            >
              <span>
                Artist 
                <span
                  class="th-wrap sort-icon"
                  style="display: none;"
                >
                  <span
                    class="icon is-small"
                  >
                    <i
                      class="mdi mdi-arrow-up"
                    />
                  </span>
                </span>
              </span>
            </th>
            <th
              class=""
              draggable="false"
            >
              <span>
                BPM 
                <span
                  class="th-wrap sort-icon"
                  style="display: none;"
                >
                  <span
                    class="icon is-small"
                  >
                    <i
                      class="mdi mdi-arrow-up"
                    />
                  </span>
                </span>
              </span>
            </th>
            <th
              class=""
              draggable="false"
            >
              <span>
                Series 
                <span
                  class="th-wrap sort-icon"
                  style="display: none;"
                >
                  <span
                    class="icon is-small"
                  >
                    <i
                      class="mdi mdi-arrow-up"
                    />
                  </span>
                </span>
              </span>
            </th>
            
            <!--v-if-->
          </tr>
          <tr>
            <!--v-if-->
            <!--v-if-->
            
            <th
              class=""
            >
              
              <div
                class="control"
              >
                <input
                  autocomplete="off"
                  class="input"
                  on="function () { [native code] }"
                  type="text"
                />
                <!--v-if-->
                <!--v-if-->
                <!--v-if-->
              </div>
              
            </th>
            <th
              class=""
            >
              
              <div
                class="control"
              >
                <input
                  autocomplete="off"
                  class="input"
                  on="function () { [native code] }"
                  type="text"
                />
                <!--v-if-->
                <!--v-if-->
                <!--v-if-->
              </div>
              
            </th>
            <th
              class=""
            >
              <!--v-if-->
            </th>
            <th
              class=""
            >
              <!--v-if-->
            </th>
            
            <!--v-if-->
          </tr>
          <!--v-if-->
        </thead>
        <tbody>
          
          
          <tr
            class=""
            draggable="false"
          >
            <!--v-if-->
            <!--v-if-->
            
            <td
              class=""
              data-label="Name"
              scoped=""
            >
              <a
                class="is-size-6-mobile"
              >
                AM-3P
              </a>
            </td>
            <td
              class=""
              data-label="Artist"
              scoped=""
            >
              <span
                class="is-size-6-mobile"
              >
                KTz
              </span>
            </td>
            <td
              class=""
              data-label="BPM"
              scoped=""
            >
              130
            </td>
            <td
              class=""
              data-label="Series"
              scoped=""
            >
              <div
                class="buttons"
              >
                
                <!--[object Object]-->
                
              </div>
            </td>
            
            <!--v-if-->
          </tr>
          <transition-stub>
            <!--v-if-->
          </transition-stub>
          <!--v-if-->
          
          
          <tr
            class=""
            draggable="false"
          >
            <!--v-if-->
            <!--v-if-->
            
            <td
              class=""
              data-label="Name"
              scoped=""
            >
              <a
                class="is-size-6-mobile"
              >
                PARANOiA
              </a>
            </td>
            <td
              class=""
              data-label="Artist"
              scoped=""
            >
              <span
                class="is-size-6-mobile"
              >
                180
              </span>
            </td>
            <td
              class=""
              data-label="BPM"
              scoped=""
            >
              180
            </td>
            <td
              class=""
              data-label="Series"
              scoped=""
            >
              <div
                class="buttons"
              >
                
                <!--[object Object]-->
                <!--[object Object]-->
                
              </div>
            </td>
            
            <!--v-if-->
          </tr>
          <transition-stub>
            <!--v-if-->
          </transition-stub>
          <!--v-if-->
          
          
          <!--v-if-->
        </tbody>
        <!--v-if-->
      </table>
      
      <transition-stub>
        <!--v-if-->
      </transition-stub>
      
    </div>
    
    <div
      class="level"
    >
      <div>
        
        
      </div>
      <div>
        <div>
          <nav
            class="pagination"
          >
            <a
              aria-current="false"
              class="pagination-link pagination-previous is-disabled pagination-previous is-disabled"
              href="#"
              role="button"
            >
              
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-left mdi-24px"
                />
              </span>
              
            </a>
            <a
              aria-current="false"
              class="pagination-link pagination-next is-disabled pagination-next is-disabled"
              href="#"
              role="button"
            >
              
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-right mdi-24px"
                />
              </span>
              
            </a>
            <ul
              class="pagination-list"
            >
              <!--First-->
              <!--v-if-->
              <!--v-if-->
              <!--Pages-->
              
              <li>
                <a
                  aria-current="true"
                  class="pagination-link is-current"
                  href="#"
                  role="button"
                >
                  
                  1
                  
                </a>
              </li>
              
              <!--Last-->
              <!--v-if-->
              <!--v-if-->
            </ul>
          </nav>
        </div>
      </div>
    </div>
    
  </div>
</section>
`;
